--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
+
 AddDefaultCharset UTF-8
 
 # compress text, html, javascript, css, xml:
